--- a/.eslintrc
+++ b/.eslintrc
@@ -15,5 +15,8 @@
     "plugin:@typescript-eslint/recommended",
     "prettier"
   ],
-  "plugins": ["@typescript-eslint"]
+  "plugins": ["@typescript-eslint"],
+  "rules": {
+    "@typescript-eslint/no-var-requires": 0
+  }
 }
