--- a/package.json
+++ b/package.json
@@ -26,10 +26,8 @@
     "typecheck": "tsc --noEmit",
     "prepare": "husky install",
     "pre-commit": "lint-staged -p false",
-    "create-page": "node ./.scaffold/index page",
-    "create-module": "node ./.scaffold/index module",
-    "create-js": "node ./.scaffold/index js",
-    "create-react": "node ./.scaffold/index react"
+    "create-page": "ts-node ./.scaffold/index page",
+    "create-module": "ts-node ./.scaffold/index module"
   },
   "dependencies": {
     "@verndale/core": "../core",
@@ -51,13 +49,16 @@
     "@storybook/html": "^6.5.13",
     "@storybook/manager-webpack5": "^6.5.13",
     "@storybook/testing-library": "^0.0.13",
+    "@types/fs-extra": "9.0.13",
     "@types/mini-css-extract-plugin": "^2.5.1",
     "@types/node": "^18.7.23",
+    "@types/prompt-sync": "4.2.0",
     "@types/webpack": "^5.28.0",
     "@types/webpack-bundle-analyzer": "^4.4.2",
     "@typescript-eslint/eslint-plugin": "5.41.0",
     "@typescript-eslint/parser": "5.41.0",
     "babel-loader": "^8.2.5",
+    "chalk": "4.1.2",
     "check-dependencies": "1.1.0",
     "copy-webpack-plugin": "^11.0.0",
     "core-js": "^3.25.3",
@@ -76,7 +77,9 @@
     "lint-staged": "13.0.3",
     "mini-css-extract-plugin": "^2.6.1",
     "postcss-loader": "^7.0.1",
+    "prompt-sync": "4.2.0",
     "regenerator-runtime": "^0.13.9",
+    "replace-in-file": "6.3.5",
     "rimraf": "^3.0.2",
     "sass": "^1.55.0",
     "sass-loader": "^13.0.2",
@@ -87,6 +90,7 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths-webpack-plugin": "^4.0.0",
     "typescript": "^4.8.4",
+    "valid-filename": "3.1.0",
     "webpack": "^5.74.0",
     "webpack-bundle-analyzer": "^4.6.1",
     "webpack-cli": "^4.10.0"
