--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "prepare": "husky install",
     "pre-commit": "lint-staged -p false",
     "create-page": "ts-node ./.scaffold/index page",
-    "create-module": "ts-node ./.scaffold/index module"
+    "create-module": "ts-node ./.scaffold/index module",
+    "create-component": "ts-node ./.scaffold/index component"
   },
   "dependencies": {
     "@verndale/core": "../core",
