Update typescript version and add tools folder

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "prestart": "yarn check-deps",
     "start": "start-storybook -p 6006",
     "prebuild": "yarn check-deps && yarn js-lint && yarn style-lint && yarn typecheck",
-    "build": "rimraf dist && webpack --env production --progress",
+    "build": "rimraf dist && webpack --env production --progress && yarn build-storybook",
     "build-storybook": "build-storybook -o ./tools/component-library/",
     "typecheck": "tsc --noEmit",
     "prepare": "husky install",
@@ -90,7 +90,7 @@
     "stylelint-use-logical-spec": "4.1.0",
     "ts-node": "^10.9.1",
     "tsconfig-paths-webpack-plugin": "^4.0.0",
-    "typescript": "^4.8.4",
+    "typescript": "4.8.4",
     "valid-filename": "3.1.0",
     "webpack": "^5.74.0",
     "webpack-bundle-analyzer": "^4.6.1",
