--- a/package.json
+++ b/package.json
@@ -45,10 +45,11 @@
     "@storybook/html": "^7.0.0-beta.62",
     "@storybook/html-vite": "^7.0.0-beta.62",
     "@storybook/testing-library": "^0.0.14-next.1",
+    "@types/prompt-sync": "4.2.0",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
     "autoprefixer": "10.4.14",
-    "chalk": "5.2.0",
+    "chalk": "4.1.2",
     "check-dependencies": "1.1.0",
     "eslint": "^8.35.0",
     "eslint-config-prettier": "^8.7.0",
@@ -64,8 +65,9 @@
     "stylelint-config-sass-guidelines": "10.0.0",
     "stylelint-prettier": "3.0.0",
     "stylelint-use-logical-spec": "5.0.0",
+    "ts-node": "10.9.1",
     "typescript": "^4.9.3",
-    "valid-filename": "4.0.0",
+    "valid-filename": "3.1.0",
     "vite": "^4.1.0",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-imagemin": "0.6.1"
