--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,6 @@
     "noImplicitReturns": true,
     "skipLibCheck": true
   },
+  "typeRoots": ["./node_modules/@types", "./src/@types", "./.storybook/@types"],
   "include": ["src"]
 }
