add initial support for svgsheet

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "replace-in-file": "6.3.5",
+    "rollup-plugin-svg-icons": "2.1.2",
     "sass": "^1.58.3",
     "storybook": "^7.0.0-rc.3",
     "stylelint": "15.2.0",
