--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@verndale/core": "2.1.1",
     "focus-visible": "^5.2.0",
+    "picomatch": "2.3.1",
     "sass-mq": "^6.0.0",
     "sass-rem": "3.0.0",
     "scss-reset": "^1.2.2",
