--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "@storybook/html-vite": "^7.0.0-rc.5",
     "@storybook/testing-library": "^0.0.14-next.1",
     "@types/prompt-sync": "4.2.0",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
     "autoprefixer": "10.4.14",
@@ -64,6 +66,7 @@
     "rollup-plugin-svg-icons": "2.1.2",
     "sass": "^1.58.3",
     "storybook": "^7.0.0-rc.5",
+    "storybook-addon-mock": "file:.storybook/storybook-addon-mock-3.2.0.tgz",
     "stylelint": "15.2.0",
     "stylelint-config-sass-guidelines": "10.0.0",
     "stylelint-prettier": "3.0.0",
