--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@storybook/html-vite": "^7.0.0-rc.5",
     "@storybook/testing-library": "^0.0.14-next.1",
     "@types/prompt-sync": "4.2.0",
+    "@types/uuid": "9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
     "autoprefixer": "10.4.14",
