--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -3,7 +3,8 @@
   "plugins": [
     "@namics/stylelint-bem",
     "stylelint-use-logical-spec",
-    "stylelint-prettier"
+    "stylelint-prettier",
+    "stylelint-order"
   ],
   "rules": {
     "prettier/prettier": true,
@@ -13,6 +14,7 @@
     ],
     "selector-class-pattern": null,
     "selector-no-qualifying-type": null,
+    "order/properties-alphabetical-order": true,
     "scss/selector-no-redundant-nesting-selector": null,
     "scss/at-import-partial-extension-blacklist": null,
     "plugin/stylelint-bem-namics": {
