--- a/package.json
+++ b/package.json
@@ -48,9 +48,9 @@
     "@storybook/html-vite": "^7.0.0-rc.5",
     "@storybook/testing-library": "^0.0.14-next.1",
     "@types/prompt-sync": "4.2.0",
-    "@types/uuid": "9.0.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/uuid": "9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
     "autoprefixer": "10.4.14",
@@ -70,6 +70,7 @@
     "storybook-addon-mock": "file:.storybook/storybook-addon-mock-3.2.0.tgz",
     "stylelint": "15.2.0",
     "stylelint-config-sass-guidelines": "10.0.0",
+    "stylelint-order": "6.0.3",
     "stylelint-prettier": "3.0.0",
     "stylelint-use-logical-spec": "5.0.0",
     "ts-node": "10.9.1",
