--- a/package.json
+++ b/package.json
@@ -41,11 +41,11 @@
   },
   "devDependencies": {
     "@namics/stylelint-bem": "8.1.0",
-    "@storybook/addon-a11y": "^7.0.0-rc.5",
-    "@storybook/addon-essentials": "^7.0.0-rc.5",
-    "@storybook/blocks": "^7.0.0-rc.5",
-    "@storybook/html": "^7.0.0-rc.5",
-    "@storybook/html-vite": "^7.0.0-rc.5",
+    "@storybook/addon-a11y": "^7.0.0-rc.6",
+    "@storybook/addon-essentials": "^7.0.0-rc.6",
+    "@storybook/blocks": "^7.0.0-rc.6",
+    "@storybook/html": "^7.0.0-rc.6",
+    "@storybook/html-vite": "^7.0.0-rc.6",
     "@storybook/testing-library": "^0.0.14-next.1",
     "@types/prompt-sync": "4.2.0",
     "@types/react": "18.0.28",
@@ -66,7 +66,8 @@
     "replace-in-file": "6.3.5",
     "rollup-plugin-svg-icons": "2.1.2",
     "sass": "^1.58.3",
-    "storybook": "^7.0.0-rc.5",
+    "storybook": "^7.0.0-rc.6",
+    "storybook-addon-grid-overlay": "0.0.5",
     "storybook-addon-mock": "file:.storybook/storybook-addon-mock-3.2.0.tgz",
     "stylelint": "15.2.0",
     "stylelint-config-sass-guidelines": "10.0.0",
